--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,6 +63,15 @@ jobs:
           echo -e "Execution Fail!"
           exit 1
         fi
+        sleep 15
+        resp=$(curl http://localhost:8002/compute -X POST -d @bad_order.json)
+        echo "$resp"
+        if [[ $resp == *"missing zip code"* ]]; then
+          echo -e "Execution Success!"
+        else
+          echo -e "Execution Fail!"
+          exit 1
+        fi
         kill -9 `cat sales_tax_rate/sales_tax_rate.pid`
         rm sales_tax_rate/sales_tax_rate.pid
         kill -9 `cat order_total/order_total.pid`
